upd9: bug fixes
