# docs/swagger.json
@@ -64,9 +64,6 @@
                     }
                 ],
                 "description": "Обновляет пользователя.",
-                "consumes": [
-                    "*/*"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -93,6 +90,12 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "Updated ID",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
@@ -120,9 +123,6 @@
                     }
                 ],
                 "description": "Создает нового пользователя.",
-                "consumes": [
-                    "*/*"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -206,7 +206,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "User delete",
                         "schema": {
                             "type": "string"
                         }
@@ -219,12 +219,6 @@
                     },
                     "404": {
                         "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/utils.Error"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/utils.Error"
                         }
